# goit-ds-hw-02

./: LICENSE  README.md  main.py  pyproject.toml  tasks.sqlite
